--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
           ],
           dragOptions: [
             // Similarity 1 - Warriors
-            { id: 's1', text: 'Both Macbeth and Banquo begin the play as brave warriors who demonstrate loyalty to King Duncan through their military service.', type: 'point', color: '#5D1D2E' },
-            { id: 's2', text: 'Macbeth is described as "valour\'s minion" who defeats the traitor Macdonwald in battle.', type: 'evidence-m', color: '#BF9A4A' },
-            { id: 's3', text: 'Banquo fights alongside Macbeth and is equally praised for his courage in defending Scotland.', type: 'evidence-b', color: '#BF9A4A' },
-            { id: 's4', text: 'This shared beginning establishes both characters as honorable men of similar status and reputation, which makes their later divergence more significant.', type: 'explain', color: '#2C3E50' },
-            { id: 's5', text: 'Shakespeare establishes this parallel to show that nobility and virtue are not determined by initial circumstances but by the choices characters make.', type: 'link', color: '#8E44AD' },
+            { id: 's1', text: 'Both Macbeth and Banquo start the play as brave warriors. They are loyal to King Duncan and serve him through military service.', type: 'point', color: '#5D1D2E' },
+            { id: 's2', text: 'Macbeth is called "valour\'s minion" and defeats the traitor Macdonwald in battle.', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 's3', text: 'Banquo fights alongside Macbeth and is also praised for his courage in defending Scotland.', type: 'evidence-b', color: '#BF9A4A' },
+            { id: 's4', text: 'This shared beginning shows that both men start as honorable warriors with similar status. This makes their different choices later in the play more important.', type: 'explain', color: '#2C3E50' },
+            { id: 's5', text: 'Shakespeare uses this similarity to show that a person\'s character is determined by their choices, not by their starting position in life.', type: 'link', color: '#8E44AD' },
             
             // Similarity 2 - Prophecies
-            { id: 's6', text: 'Both Macbeth and Banquo are given prophecies by the weird sisters that offer them glimpses of future power.', type: 'point', color: '#5D1D2E' },
-            { id: 's7', text: 'Macbeth is told "All hail, Macbeth, that shalt be King hereafter!" and becomes "rapt" with the possibility.', type: 'evidence-m', color: '#BF9A4A' },
-            { id: 's8', text: 'Banquo is told "Thou shalt get kings, though thou be none," receiving a similar promise of dynastic greatness.', type: 'evidence-b', color: '#BF9A4A' },
-            { id: 's9', text: 'The fact that both receive supernatural knowledge places them in identical situations where they must choose how to respond to temptation.', type: 'explain', color: '#2C3E50' },
-            { id: 's10', text: 'By giving both characters the same type of prophecy, Shakespeare creates a controlled comparison that isolates character as the determining factor in their fates.', type: 'link', color: '#8E44AD' },
+            { id: 's6', text: 'Both Macbeth and Banquo receive prophecies from the weird sisters. These prophecies offer them glimpses of future power.', type: 'point', color: '#5D1D2E' },
+            { id: 's7', text: 'Macbeth is told "All hail, Macbeth, that shalt be King hereafter!" He becomes "rapt" with this possibility.', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 's8', text: 'Banquo is told "Thou shalt get kings, though thou be none." This means his descendants will be kings.', type: 'evidence-b', color: '#BF9A4A' },
+            { id: 's9', text: 'Both men receive supernatural knowledge about their futures. This puts them in the same situation where they must choose how to respond to temptation.', type: 'explain', color: '#2C3E50' },
+            { id: 's10', text: 'By giving both characters similar prophecies, Shakespeare shows that character is the main factor that determines their different fates.', type: 'link', color: '#8E44AD' },
 
             // Extra options (distractors)
-            { id: 's11', text: 'The witches vanish "what seemed corporal melted, as breath into the wind."', type: 'evidence-m', color: '#BF9A4A' },
-            { id: 's12', text: 'Both characters are ambitious men seeking advancement in Duncan\'s court.', type: 'point', color: '#5D1D2E' }
+            { id: 's11', text: 'The witches vanish and "what seemed corporal melted, as breath into the wind."', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 's12', text: 'Both characters are ambitious men who want advancement in Duncan\'s court.', type: 'point', color: '#5D1D2E' }
           ]
         },
         {
@@ -103,22 +103,22 @@
           ],
           dragOptions: [
             // Difference 1 - Response
-            { id: 'd1', text: 'Macbeth and Banquo respond to the witches\' prophecies in fundamentally different ways, revealing their contrasting characters.', type: 'point', color: '#5D1D2E' },
-            { id: 'd2', text: 'Macbeth becomes obsessed with the prophecy, and later admits his "vaulting ambition" is his only motivation for murdering Duncan.', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 'd1', text: 'Macbeth and Banquo respond to the witches\' prophecies in very different ways. This reveals their contrasting characters.', type: 'point', color: '#5D1D2E' },
+            { id: 'd2', text: 'Macbeth becomes obsessed with the prophecy. He later admits his "vaulting ambition" is his only motivation for murdering Duncan.', type: 'evidence-m', color: '#BF9A4A' },
             { id: 'd3', text: 'Banquo immediately warns that "the instruments of darkness tell us truths, win us with honest trifles, to betray us in deepest consequence."', type: 'evidence-b', color: '#BF9A4A' },
-            { id: 'd4', text: 'While Macbeth allows the prophecy to awaken his ambition and drive him to murder, Banquo recognizes the danger and maintains his skepticism of supernatural forces.', type: 'explain', color: '#2C3E50' },
-            { id: 'd5', text: 'This contrast demonstrates that external temptation alone does not determine action; rather, it is internal character that decides whether one succumbs to or resists evil.', type: 'link', color: '#8E44AD' },
+            { id: 'd4', text: 'Macbeth allows the prophecy to awaken his ambition and drive him to murder. However, Banquo recognizes the danger and remains skeptical of supernatural forces.', type: 'explain', color: '#2C3E50' },
+            { id: 'd5', text: 'This contrast shows that temptation alone does not determine a person\'s actions. Internal character decides whether someone gives in to or resists evil.', type: 'link', color: '#8E44AD' },
 
             // Difference 2 - Moral integrity
-            { id: 'd6', text: 'Under the pressure of temptation and opportunity, Macbeth\'s morality collapses while Banquo\'s integrity remains firm.', type: 'point', color: '#5D1D2E' },
-            { id: 'd7', text: 'Macbeth descends into tyranny, becoming a murderer whom even Lady Macbeth cannot chastise or control by the play\'s end.', type: 'evidence-m', color: '#BF9A4A' },
-            { id: 'd8', text: 'Banquo, despite similar temptations, prays "restrain in me the cursed thoughts that nature gives way to in repose," actively fighting against evil impulses.', type: 'evidence-b', color: '#BF9A4A' },
-            { id: 'd9', text: 'Macbeth\'s moral deterioration transforms him from honored thane to "dismal" tyrant, whereas Banquo dies with his honor intact, demonstrating the power of moral choice.', type: 'explain', color: '#2C3E50' },
-            { id: 'd10', text: 'Shakespeare uses this stark difference to argue that true nobility lies not in rank or prophecy, but in the moral decisions one makes when faced with temptation.', type: 'link', color: '#8E44AD' },
+            { id: 'd6', text: 'Under the pressure of temptation and opportunity, Macbeth\'s morality collapses. However, Banquo\'s integrity remains firm.', type: 'point', color: '#5D1D2E' },
+            { id: 'd7', text: 'Macbeth descends into tyranny and becomes a murderer. By the play\'s end, even Lady Macbeth cannot chastise or control him.', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 'd8', text: 'Banquo, despite similar temptations, prays "restrain in me the cursed thoughts that nature gives way to in repose." He actively fights against evil impulses.', type: 'evidence-b', color: '#BF9A4A' },
+            { id: 'd9', text: 'Macbeth\'s moral deterioration transforms him from an honored thane to a "dismal" tyrant. Banquo dies with his honor intact. This demonstrates the power of moral choice.', type: 'explain', color: '#2C3E50' },
+            { id: 'd10', text: 'Shakespeare uses this difference to argue that true nobility does not come from rank or prophecy. It comes from the moral decisions people make when faced with temptation.', type: 'link', color: '#8E44AD' },
 
             // Extra options
-            { id: 'd11', text: 'Macbeth receives the title of Thane of Cawdor, which seems to confirm the witches\' prophecy.', type: 'evidence-m', color: '#BF9A4A' },
-            { id: 'd12', text: 'Duncan is described as a "peerless" king, making his murder even more heinous.', type: 'evidence-m', color: '#BF9A4A' }
+            { id: 'd11', text: 'Macbeth receives the title of Thane of Cawdor. This seems to confirm the witches\' prophecy.', type: 'evidence-m', color: '#BF9A4A' },
+            { id: 'd12', text: 'Duncan is described as a "peerless" king. This makes his murder even more terrible.', type: 'evidence-m', color: '#BF9A4A' }
           ]
         }
       ];
